--- a/src/thesis_schneg/inspect_results.ipynb
+++ b/src/thesis_schneg/inspect_results.ipynb
@@ -1153,13 +1153,13 @@
      "output_type": "stream",
      "text": [
       "Loading data from aol dataset\n",
-      "aol loaded in 0.005491022268931071 min\n",
+      "aol loaded in 4.83552614847819e-05 min\n",
       "Loading data from aql dataset\n",
-      "aql loaded in 0.010757378737131755 min\n",
+      "aql loaded in 0.007263712088267009 min\n",
       "Loading data from ms-marco dataset\n",
-      "ms-marco loaded in 0.005170655250549316 min\n",
+      "ms-marco loaded in 0.004926260312398275 min\n",
       "Loading data from orcas dataset\n",
-      "orcas loaded in 0.0051531195640563965 min\n"
+      "orcas loaded in 0.004536056518554687 min\n"
      ]
     }
    ],
@@ -1633,6 +1633,57 @@
     "        print(data.iloc[i:i+10])\n",
     "    # print(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10154742, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from thesis_schneg.model import DatasetName\n",
+    "from thesis_schneg.vis_modules import _get_results_paths, load_results\n",
+    "import time\n",
+    "\n",
+    "analysis_name = 'deduplicate-queries'\n",
+    "# note that we only consider the top words of cleaned aql\n",
+    "\n",
+    "# dataset = None\n",
+    "dataset = 'aol'\n",
+    "# dataset = 'aql'\n",
+    "# dataset = 'ms-marco'\n",
+    "# dataset = 'orcas'\n",
+    "\n",
+    "\n",
+    "if dataset is None:\n",
+    "    result_data = {}\n",
+    "\n",
+    "    # crawl files from all datasets and load into dictionary\n",
+    "    paths = {f\"{name}\": _get_results_paths(name, analysis_name, cleaned_aql=True) for name in [\n",
+    "        \"aol\", \"aql\", \"ms-marco\", \"orcas\"]}\n",
+    "    # iterate over datasets and create visualization\n",
+    "    for name, result_paths in paths.items():\n",
+    "        start_time = time.time()\n",
+    "        print(f\"Loading data from {name} dataset\")\n",
+    "        vis_data = load_results(result_paths)\n",
+    "        result_data.update({name: vis_data})\n",
+    "        end_time = time.time()  \n",
+    "        print(f\"{name} loaded in {(end_time - start_time)/60} min\")\n",
+    "else:\n",
+    "    result_data = {}\n",
+    "    path = _get_results_paths(dataset, analysis_name,  cleaned_aql=True)\n",
+    "    vis_data = load_results(path)\n",
+    "    result_data.update({dataset: vis_data})\n",
+    "\n",
+    "print(result_data[dataset].shape)"
+   ]
   }
  ],
  "metadata": {
@@ -1651,7 +1702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
