--- a/src/thesis_schneg/vis_inference_based.ipynb
+++ b/src/thesis_schneg/vis_inference_based.ipynb
@@ -484,6 +484,66 @@
     "\n",
     "    fig.savefig(vis_dir.joinpath(f\"all.{plot_format}\"), format=plot_format)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Question Classifier\n",
+    "We employ a clssifier to detect questions in the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'aol':    is-question   count()\n",
+      "0         True    352916\n",
+      "0        False  36036651}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from thesis_schneg.model import DatasetName\n",
+    "from thesis_schneg.vis_modules import _get_results_paths, load_results\n",
+    "import time\n",
+    "\n",
+    "analysis_name = 'questions'\n",
+    "\n",
+    "dataset = None\n",
+    "dataset = 'aol'\n",
+    "# dataset = 'aql'\n",
+    "# dataset = 'ms-marco'\n",
+    "# dataset = 'orcas'\n",
+    "\n",
+    "\n",
+    "if dataset is None:\n",
+    "    result_data = {}\n",
+    "\n",
+    "    # crawl files from all datasets and load into dictionary\n",
+    "    paths = {f\"{name}\": _get_results_paths(name, analysis_name, english=True) for name in [\n",
+    "        \"aol\", \"aql\", \"ms-marco\", \"orcas\"]}\n",
+    "    # iterate over datasets and create visualization\n",
+    "    for name, result_paths in paths.items():\n",
+    "        start_time = time.time()\n",
+    "        print(f\"Loading data from {name} dataset\")\n",
+    "        vis_data = load_results(result_paths)\n",
+    "        result_data.update({name: vis_data})\n",
+    "        end_time = time.time()  \n",
+    "        print(f\"{name} loaded in {(end_time - start_time)/60} min\")\n",
+    "else:\n",
+    "    result_data = {}\n",
+    "    path = _get_results_paths(dataset, analysis_name, english=True)\n",
+    "    vis_data = load_results(path)\n",
+    "    result_data.update({dataset: vis_data})\n",
+    "\n",
+    "print(result_data)"
+   ]
   }
  ],
  "metadata": {
