thesis: plots added, questions evaluated

--- a/thesis/appendixA.tex
+++ b/thesis/appendixA.tex
@@ -3,7 +3,7 @@
 \begin{table}[h]
     \centering
     \scalebox{0.7}{
-    \begin{tabular}{@{}llllllr@{}} \toprule
+    \begin{tabular}{@{}rlrrlrr@{}} \toprule
         & \multicolumn{3}{c}{\textbf{AOL}}  & \multicolumn{3}{c}{\textbf{AQL}} \\ \cmidrule(l{2pt}r{2pt}){2-4} \cmidrule(l{2pt}r{2pt}){5-7}
         Rank & Query & Count & Ratio & Query & Count & Ratio \\ \midrule
         1 & \texttt{-} & 1,000,375 & 0\% & \texttt{finance} & 0 & 0\% \\
@@ -36,7 +36,7 @@
 \begin{table}[h]
     \centering
     \scalebox{0.7}{
-        \begin{tabular}{@{}llllllr@{}} \toprule
+        \begin{tabular}{@{}rlrrlrr@{}} \toprule
         & \multicolumn{3}{c}{\textbf{AOL}}  & \multicolumn{3}{c}{\textbf{AQL}} \\ \cmidrule(l{2pt}r{2pt}){2-4} \cmidrule(l{2pt}r{2pt}){5-7}
         Rank & Query & Count & Ratio & Query & Count & Ratio \\ \midrule
         1 & \texttt{of} & 1,126,030 & 1.26\% & \texttt{=} & 29,301,944 & 1.81\% \\
