--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -75,6 +75,7 @@
 \usepackage{multirow} % for tables (added 3/7/2025)
 \usepackage{multicol} % for multicolumned lists (added 4/6/2025)
 \usepackage{graphicx} % for including pdf-plots (added 4/8/2025)
+\usepackage{placeins} % to place figs, tables etc. (added 4/9/2025)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % Commenting (by your supervisor)
