--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -200,7 +200,6 @@
    journal= {Annual Review of Statistics and Its Application},
    year = {2019},
    volume = {6},
-   number = {Volume 6, 2019},
    pages = {405-431},
    doi = {https://doi.org/10.1146/annurev-statistics-030718-104938},
    url = {https://www.annualreviews.org/content/journals/10.1146/annurev-statistics-030718-104938},
@@ -670,3 +669,12 @@ type = {Master's thesis},
 }
 
 
+@article{kruskal:1964,
+  title={{M}ultidimensional {S}caling by {O}ptimizing {G}oodness of {F}it to a {N}onmetric {H}ypothesis},
+  volume={29},
+  DOI={10.1007/BF02289565},
+  number={1},
+  journal={Psychometrika},
+  author={Kruskal, Joseph B.},
+  year={1964},
+  pages={1–27}}
