--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -76,6 +76,8 @@
 \usepackage{multicol} % for multicolumned lists (added 4/6/2025)
 \usepackage{graphicx} % for including pdf-plots (added 4/8/2025)
 \usepackage{placeins} % to place figs, tables etc. (added 4/9/2025)
+\usepackage{amsmath} % for math (added 4/10/2025)
+\usepackage{amsfonts} % for math (added 4/13/2025)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % Commenting (by your supervisor)
